# trustify-mcp

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
src/: auth.rs
tests/: integration_test.rs  mcp-inspector-tests-config.json
