[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stdio"
path = "src/bin/stdio.rs"

[[bin]]
name = "sse"
path = "src/bin/sse.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
openid = "0.17"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rmcp = { version = "0.1.5", features = ["server", "transport-sse-server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
trustify-module-fundamental = { git = "https://github.com/trustification/trustify.git", tag = "v0.3.0-rc.2", package = "trustify-module-fundamental"}
trustify-auth = { git = "https://github.com/trustification/trustify.git", tag = "v0.3.0-rc.2", package = "trustify-auth"}
urlencoding = "2.1"
